--- a/Application/Home/View/Index/goods.html
+++ b/Application/Home/View/Index/goods.html
@@ -12,7 +12,13 @@
 <div class="main w1210 mt10 bc">
     <!-- 面包屑导航 start -->
     <div class="breadcrumb">
-        <h2>当前位置：<a href="">首页</a> > <a href="">电脑、办公</a> > <a href="">笔记本</a> > ThinkPad X230(23063T4）12.5英寸笔记本</h2>
+        <h2>当前位置：
+            <a href="<?php U('/')?>">首页</a> >
+            <?php $catPath = array_reverse($catPath);?>
+            <?php foreach($catPath as $key => $value):?>
+            <a href="<?php U('index/goods',array('id'=>$value['id']))?>"><?php echo $value['cat_name'];?></a>>
+            <?php endforeach;?>
+            <?php echo $info['goods_name'];?></h2>
     </div>
     <!-- 面包屑导航 end -->
     <!-- 主体页面左侧内容 start -->
