--- a/Application/Home/View/Index/goods.html
+++ b/Application/Home/View/Index/goods.html
@@ -167,10 +167,10 @@
             <!-- 商品基本信息区域 start -->
             <div class="goodsinfo fl ml10">
                 <ul>
-                    <li><span>商品编号： </span>971344</li>
-                    <li class="market_price"><span>定价：</span><em>￥6399.00</em></li>
-                    <li class="shop_price"><span>本店价：</span> <strong>￥6299.00</strong> <a href="">(降价通知)</a></li>
-                    <li><span>上架时间：</span>2012-09-12</li>
+                    <li><span>商品编号： </span><?php echo $info['id'];?></li>
+                    <li class="market_price"><span>定价：</span><em>￥<?php echo $info['market_price'];?></em></li>
+                    <li class="shop_price"><span>本店价：</span> <strong>￥<?php echo $info['shop_price'];?></strong> <a href="">(降价通知)</a></li>
+                    <li><span>上架时间：</span><?php $date = explode(" ",$info['addtime']); echo $date[0];?></li>
                     <li class="star"><span>商品评分：</span> <strong></strong><a href="">(已有21人评价)</a></li>
                     <!-- 此处的星级切换css即可 默认为5星 star4 表示4星 star3 表示3星 star2表示2星 star1表示1星 -->
                 </ul>
@@ -234,8 +234,8 @@
         <div class="detail">
             <div class="detail_hd">
                 <ul>
-                    <li class="first"><span>商品介绍</span></li>
-                    <li class="on"><span>商品评价</span></li>
+                    <li class="on first"><span>商品介绍</span></li>
+                    <li class=""><span>商品评价</span></li>
                     <li><span>售后保障</span></li>
                 </ul>
             </div>
