--- a/Application/Home/View/Index/goods.html
+++ b/Application/Home/View/Index/goods.html
@@ -169,39 +169,34 @@
                 <ul>
                     <li><span>商品编号： </span><?php echo $info['id'];?></li>
                     <li class="market_price"><span>定价：</span><em>￥<?php echo $info['market_price'];?></em></li>
-                    <li class="shop_price"><span>本店价：</span> <strong>￥<?php echo $info['shop_price'];?></strong> <a href="">(降价通知)</a></li>
+                    <li class="shop_price"><span>本店价：</span> <strong>￥<?php echo $info['shop_price'];?></strong> <a
+                            href="">(降价通知)</a></li>
                     <li><span>上架时间：</span><?php $date = explode(" ",$info['addtime']); echo $date[0];?></li>
                     <li class="star"><span>商品评分：</span> <strong></strong><a href="">(已有21人评价)</a></li>
                     <!-- 此处的星级切换css即可 默认为5星 star4 表示4星 star3 表示3星 star2表示2星 star1表示1星 -->
                 </ul>
                 <form action="" method="post" class="choose">
                     <ul>
+                        <?php foreach($keXuanData as $key => $value):?>
+
                         <li class="product">
                             <dl>
-                                <dt>颜色：</dt>
+                                <dt><?php echo $key;?>：</dt>
                                 <dd>
-                                    <a class="selected" href="javascript:;">黑色 <input type="radio" name="color"
-                                                                                      value="黑色" checked="checked"/></a>
-                                    <a href="javascript:;">白色 <input type="radio" name="color" value="白色"/></a>
-                                    <a href="javascript:;">蓝色 <input type="radio" name="color" value="蓝色"/></a>
+                                    <?php $index1 = 0; foreach($value as $key1 => $value1):?>
+                                    <?php if($index1 == 0):?>
+                                    <a class="selected" href="javascript:;"><?php echo $value1['attr_value'];?> <input type="radio" name="color" value="<?php echo $value1['attr_value'];?>" checked="checked"/></a>
+                                    <?php else:?>
+                                    <a href="javascript:;"><?php echo $value1['attr_value'];?> <input type="radio" name="color" value="<?php echo $value1['attr_value'];?>"/></a>
+                                    <?php endif;?>
+                                    <?php $index1 += 1;?>
+                                    <?php endforeach;?>
                                     <input type="hidden" name="" value=""/>
                                 </dd>
                             </dl>
                         </li>
 
-                        <li class="product">
-                            <dl>
-                                <dt>版本：</dt>
-                                <dd>
-                                    <a href="javascript:;">i3 4G内存版 <input type="radio" name="ver" value=""/></a>
-                                    <a href="javascript:;">i5 4G内存版 <input type="radio" name="ver" value=""/></a>
-                                    <a class="selected" href="javascript:;">i5 8G内存版<input type="radio" name="ver"
-                                                                                           value="" checked="checked"/></a>
-                                    <a href="javascript:;">SSD超极本 <input type="radio" name="ver" value=""/></a>
-                                    <input type="hidden" name="" value=""/>
-                                </dd>
-                            </dl>
-                        </li>
+                        <?php endforeach;?>
 
                         <li>
                             <dl>
