--- a/Application/Home/View/Index/goods.html
+++ b/Application/Home/View/Index/goods.html
@@ -169,10 +169,21 @@
                 <ul>
                     <li><span>商品编号： </span><?php echo $info['id'];?></li>
                     <li class="market_price"><span>定价：</span><em>￥<?php echo $info['market_price'];?></em></li>
-                    <li class="shop_price"><span>本店价：</span> <strong>￥<?php echo $info['shop_price'];?></strong> <a
-                            href="">(降价通知)</a></li>
+                    <li class="shop_price"><span>本店价：</span> <strong>￥<?php echo $info['shop_price'];?></strong> <a href="">(降价通知)</a></li>
+                    <li class="shop_price"><span>会员价格：</span>
+                        <p>
+                        <table border="1" cellpadding="5" cellspacing="5" width="30%">
+                            <?php foreach ($mpData as $k => $v): ?>
+                            <tr>
+                                <td><?php echo $v['level_name']; ?></td>
+                                <td>￥<?php echo $v['price']; ?>元</td>
+                            </tr>
+                            <?php endforeach; ?>
+                        </table>
+                        </p>
+                    </li>
                     <li><span>上架时间：</span><?php $date = explode(" ",$info['addtime']); echo $date[0];?></li>
-                    <li class="star"><span>商品评分：</span> <strong></strong><a href="">(已有21人评价)</a></li>
+                    <li class="star "><span>商品评分：</span> <strong></strong><a href="">(已有21人评价)</a></li>
                     <!-- 此处的星级切换css即可 默认为5星 star4 表示4星 star3 表示3星 star2表示2星 star1表示1星 -->
                 </ul>
                 <form action="" method="post" class="choose">
@@ -229,8 +240,8 @@
         <div class="detail">
             <div class="detail_hd">
                 <ul>
-                    <li class="on first"><span>商品介绍</span></li>
-                    <li class=""><span>商品评价</span></li>
+                    <li class="first"><span>商品介绍</span></li>
+                    <li class="on"><span>商品评价</span></li>
                     <li><span>售后保障</span></li>
                 </ul>
             </div>
@@ -239,17 +250,9 @@
                 <div class="introduce detail_div none">
                     <div class="attr mt15">
                         <ul>
-                            <li><span>商品名称：</span>ThinkPadX230(2306 3T4）</li>
-                            <li><span>商品编号：</span>979631</li>
-                            <li><span>品牌：</span>联想（Thinkpad）</li>
-                            <li><span>上架时间：</span>2013-09-18 17:58:12</li>
-                            <li><span>商品毛重：</span>2.47kg</li>
-                            <li><span>商品产地：</span>中国大陆</li>
-                            <li><span>显卡：</span>集成显卡</li>
-                            <li><span>触控：</span>非触控</li>
-                            <li><span>厚度：</span>正常厚度（>25mm）</li>
-                            <li><span>处理器：</span>Intel i5</li>
-                            <li><span>尺寸：</span>12英寸</li>
+                            <?php foreach($weiYiData as $key => $value):?>
+                            <li><span><?php echo $value['attr_name'];?>：</span><?php echo $value['attr_value'];?></li>
+                            <?php endforeach;?>
                         </ul>
                     </div>
                     <div class="desc mt10">
