添加登录和注册的内容

--- a/Application/Home/View/Layout/layout.html
+++ b/Application/Home/View/Layout/layout.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title><?php echo $_page_title; ?></title>
-    <meta name="keywords" content="<?php echo $_page_keywords; ?>" />
-    <meta name="description" content="<?php echo $_page_description; ?>" />
+    <meta name="keywords" content="<?php echo $_page_keywords; ?>"/>
+    <meta name="description" content="<?php echo $_page_description; ?>"/>
     <!-- 引入公共的CSS -->
     <link rel="stylesheet" href="<?php echo C('HOME_CSS_URL');?>/base.css" type="text/css">
     <link rel="stylesheet" href="<?php echo C('HOME_CSS_URL');?>/global.css" type="text/css">
@@ -24,7 +25,7 @@
         </div>
         <div class="topnav_right fr">
             <ul>
-                <li>您好，欢迎来到京西！[<a href="login.html">登录</a>] [<a href="register.html">免费注册</a>] </li>
+                <li id="logInfo"></li>
                 <li class="line">|</li>
                 <li>我的订单</li>
                 <li class="line">|</li>
@@ -56,16 +57,32 @@
         <a href="">京西论坛</a>
     </p>
     <p class="copyright">
-        © 2005-2013 京东网上商城 版权所有，并保留所有权利。  ICP备案证书号:京ICP证070359号
+        © 2005-2013 京东网上商城 版权所有，并保留所有权利。 ICP备案证书号:京ICP证070359号
     </p>
     <p class="auth">
-        <a href=""><img src="<?php echo C('HOME_IMG_URL');?>/xin.png" alt="" /></a>
-        <a href=""><img src="<?php echo C('HOME_IMG_URL');?>/kexin.jpg" alt="" /></a>
-        <a href=""><img src="<?php echo C('HOME_IMG_URL');?>/police.jpg" alt="" /></a>
-        <a href=""><img src="<?php echo C('HOME_IMG_URL');?>/beian.gif" alt="" /></a>
+        <a href=""><img src="<?php echo C('HOME_IMG_URL');?>/xin.png" alt=""/></a>
+        <a href=""><img src="<?php echo C('HOME_IMG_URL');?>/kexin.jpg" alt=""/></a>
+        <a href=""><img src="<?php echo C('HOME_IMG_URL');?>/police.jpg" alt=""/></a>
+        <a href=""><img src="<?php echo C('HOME_IMG_URL');?>/beian.gif" alt=""/></a>
     </p>
 </div>
 <!-- 底部版权 end -->
 
 </body>
 </html>
+
+<script>
+    $.ajax({
+        type: "GET",
+        url: "<?php echo U('Member/ajaxChkLogin');?>",
+        dataType: 'json',
+        success: function (data) {
+            if(data.login == 1){
+                var li = '您好，'+data.username+' [<a href="<?php echo U('Member/logout'); ?>">退出</a>]';
+            }else{
+                var li = '您好，欢迎来到京西！[<a href="<?php echo U('Member/login'); ?>">登录</a>] [<a href="<?php echo U('Member/regist'); ?>">免费注册</a>]'
+            }
+            $('#logInfo').html(li);
+        }
+    });
+</script>
