添加登录和注册的内容

--- a/Application/Home/View/Member/login.html
+++ b/Application/Home/View/Member/login.html
@@ -16,7 +16,7 @@
     </div>
     <div class="login_bd">
         <div class="login_form fl">
-            <form action="" method="post">
+            <form action="__SELF__" method="post">
                 <ul>
                     <li>
                         <label for="">用户名：</label>
