--- a/Application/Home/View/Layout/layout.html
+++ b/Application/Home/View/Layout/layout.html
@@ -78,7 +78,7 @@
         dataType: 'json',
         success: function (data) {
             if(data.login == 1){
-                var li = '您好，'+data.username+' [<a href="<?php echo U('Member/logout'); ?>">退出</a>]';
+                var li = '您好，'+data.username+"("+data.level_name+")"+' [<a href="<?php echo U('Member/logout'); ?>">退出</a>]';
             }else{
                 var li = '您好，欢迎来到京西！[<a href="<?php echo U('Member/login'); ?>">登录</a>] [<a href="<?php echo U('Member/regist'); ?>">免费注册</a>]'
             }
