--- a/Application/Home/View/Index/goods.html
+++ b/Application/Home/View/Index/goods.html
@@ -189,9 +189,10 @@
                     <li class="star "><span>商品评分：</span> <strong></strong><a href="">(已有21人评价)</a></li>
                     <!-- 此处的星级切换css即可 默认为5星 star4 表示4星 star3 表示3星 star2表示2星 star1表示1星 -->
                 </ul>
-                <form action="" method="post" class="choose">
+                <form action="<?php echo U('cart/add');?>" method="post" class="choose">
+                    <input type="hidden" name="goods_id" value="<?php echo $info['id']; ?>" />
                     <ul>
-                        <?php foreach($keXuanData as $key => $value):?>
+                        <?php $index = 0; foreach($keXuanData as $key => $value):?>
 
                         <li class="product">
                             <dl>
@@ -200,12 +201,12 @@
                                     <?php $index1 = 0; foreach($value as $key1 => $value1):?>
                                     <?php if($index1 == 0):?>
                                     <a class="selected" href="javascript:;"><?php echo $value1['attr_value'];?> <input
-                                            type="radio" name="color" value="<?php echo $value1['attr_value'];?>"
+                                            type="radio" name="goods_attr_id[<?php echo $index;?>]" value="<?php echo $value1['id'];?>"
                                             checked="checked"/></a>
                                     <?php else:?>
                                     <a href="javascript:;"><?php echo $value1['attr_value'];?> <input type="radio"
-                                                                                                      name="color"
-                                                                                                      value="<?php echo $value1['attr_value'];?>"/></a>
+                                                                                                      name="goods_attr_id[<?php echo $index;?>]"
+                                                                                                      value="<?php echo $value1['id'];?>"/></a>
                                     <?php endif;?>
                                     <?php $index1 += 1;?>
                                     <?php endforeach;?>
@@ -214,14 +215,14 @@
                             </dl>
                         </li>
 
-                        <?php endforeach;?>
+                        <?php $index++; endforeach;?>
 
                         <li>
                             <dl>
                                 <dt>购买数量：</dt>
                                 <dd>
                                     <a href="javascript:;" id="reduce_num"></a>
-                                    <input type="text" name="amount" value="1" class="amount"/>
+                                    <input type="text" name="goods_number" value="1" class="amount"/>
                                     <a href="javascript:;" id="add_num"></a>
                                 </dd>
                             </dl>
