--- a/Application/Home/View/Cart/lst.html
+++ b/Application/Home/View/Cart/lst.html
@@ -35,52 +35,32 @@
         </tr>
         </thead>
         <tbody>
+
+
+        <?php $sum = 0; foreach($data as $key => $value):?>
         <tr>
-            <td class="col1"><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/cart_goods1.jpg" alt=""/></a> <strong><a href="">【1111购物狂欢节】惠JackJones杰克琼斯纯羊毛菱形格</a></strong>
+            <td class="col1"><a href=""><?php showImage($value['mid_logo']);?></a> <strong><a
+                    href="" style="text-align: center;"><?php echo $value['goods_name'];?></a></strong>
             </td>
-            <td class="col2"><p>颜色：073深红</p>
-                <p>尺码：170/92A/S</p></td>
-            <td class="col3">￥<span>499.00</span></td>
+            <td class="col2">
+                <?php foreach($value['gaData'] as $key2 => $value2):?>
+                <p><?php echo $value2['attr_name'].":".$value2['attr_value'];?></p>
+                <?php endforeach;?>
+            </td>
+            <td class="col3">￥<span><?php echo $value['price'];?></span></td>
             <td class="col4">
                 <a href="javascript:;" class="reduce_num"></a>
                 <input type="text" name="amount" value="1" class="amount"/>
                 <a href="javascript:;" class="add_num"></a>
             </td>
-            <td class="col5">￥<span>499.00</span></td>
+            <td class="col5">￥<span><?php $tmp = $value['price']*$value['goods_number']; $sum+=$tmp;echo $tmp;?></span></td>
             <td class="col6"><a href="">删除</a></td>
         </tr>
-        <tr>
-            <td class="col1"><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/cart_goods2.jpg" alt=""/></a> <strong><a href="">九牧王王正品新款时尚休闲中长款茄克EK01357200</a></strong>
-            </td>
-            <td class="col2"><p>颜色：淡蓝色</p>
-                <p>尺码：165/88</p></td>
-            <td class="col3">￥<span>1102.00</span></td>
-            <td class="col4">
-                <a href="javascript:;" class="reduce_num"></a>
-                <input type="text" name="amount" value="1" class="amount"/>
-                <a href="javascript:;" class="add_num"></a>
-            </td>
-            <td class="col5">￥<span>1102.00</span></td>
-            <td class="col6"><a href="">删除</a></td>
-        </tr>
-        <tr>
-            <td class="col1"><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/cart_goods3.jpg" alt=""/></a> <strong><a href="">【1111购物狂欢节】捷王纯手工缝制休闲男鞋大头皮鞋
-                头层牛</a></strong></td>
-            <td class="col2"><p>颜色：0922红棕现货</p>
-                <p>尺码：40现货</p></td>
-            <td class="col3">￥<span>269.00</span></td>
-            <td class="col4">
-                <a href="javascript:;" class="reduce_num"></a>
-                <input type="text" name="amount" value="1" class="amount"/>
-                <a href="javascript:;" class="add_num"></a>
-            </td>
-            <td class="col5">￥<span>269.00</span></td>
-            <td class="col6"><a href="">删除</a></td>
-        </tr>
+        <?php endforeach;?>
         </tbody>
         <tfoot>
         <tr>
-            <td colspan="6">购物金额总计： <strong>￥ <span id="total">1870.00</span></strong></td>
+            <td colspan="6">购物金额总计： <strong>￥ <span id="total"><?php echo $sum;?></span></strong></td>
         </tr>
         </tfoot>
     </table>
