提交购物处理的页面

--- a/Application/Home/View/Layout/nav.html
+++ b/Application/Home/View/Layout/nav.html
@@ -76,7 +76,7 @@
                 </dt>
                 <dd>
                     <div class="prompt" id="cart_div_list">
-                        <img src="__PUBLIC__/Home/images/loading.gif"/>
+                        <img src="__PUBLIC__/Home/images/loading.gif" />
                     </div>
                 </dd>
             </dl>
@@ -143,3 +143,29 @@
 <!-- 头部 end-->
 
 <div style="clear:both;"></div>
+
+
+<script>
+    <?php $ic = C('IMAGE_CONFIG'); ?>
+    var picView = "<?php echo $ic['viewPath']; ?>";
+    $("#cart_list").mouseover(function(){
+        $.ajax({
+            type : "GET",
+            url : "<?php echo U('Cart/ajaxCartList'); ?>",
+            dataType : "json",
+            success : function(data)
+            {
+                // 拼出HTML放到页中
+                var html = "<table style='width: 100%;background-color: white;'>";
+                $(data).each(function(k,v){
+                    html += "<tr>";
+                    html += '<td><img width="50" src="'+picView+v.mid_logo+'" /></td>';
+                    html += '<td>'+v.goods_name+'</td>';
+                    html += '</tr>';
+                });
+                html += "</table>";
+                $("#cart_div_list").html(html);
+            }
+        });
+    });
+</script>
