--- a/Application/Home/View/Order/order_success.html
+++ b/Application/Home/View/Order/order_success.html
@@ -1,10 +1,10 @@
 <layout name="Layout/layout" />
-<link rel="stylesheet" href="<?php echo C('HOME_CSS_URL');?>/success.css" type="text/css">
+<link rel="stylesheet" href="<?php echo C('HOME_CSS_URL')?>/success.css" type="text/css">
 
 <!-- 页面头部 start -->
 <div class="header w990 bc mt15">
     <div class="logo w990">
-        <h2 class="fl"><a href="index.html"><img src="<?php echo C('HOME_IMG_URL');?>/logo.png" alt="京西商城"></a></h2>
+        <h2 class="fl"><a href="index.html"><img src="<?php echo C('HOME_IMG_URL')?>/logo.png" alt="京西商城"></a></h2>
         <div class="flow fr flow3">
             <ul>
                 <li>1.我的购物车</li>
@@ -16,6 +16,11 @@
 </div>
 <!-- 页面头部 end -->
 
+<style>
+    #alipaysubmit{margin:10px auto;width:150px;}
+    #alipaysubmit input{cursor:pointer;padding:5px;background:#F00;color:#FFF;font-weight:bold;font-size:20px;border:0;}
+</style>
+
 <div style="clear:both;"></div>
 
 <!-- 主体部分 start -->
@@ -25,8 +30,9 @@
     </div>
     <div class="success_bd">
         <p><span></span>订单提交成功，我们将及时为您处理</p>
-
+        <p><?php echo $btn; ?></p>
         <p class="message">完成支付后，你可以 <a href="">查看订单状态</a>  <a href="">继续购物</a> <a href="">问题反馈</a></p>
     </div>
 </div>
 <!-- 主体部分 end -->
+
